dark theme for coverage tool

--- a/scripts/coverage_stats.html
+++ b/scripts/coverage_stats.html
@@ -17,8 +17,8 @@
         <meta charset='utf-8'/>
         <style>
 :root {
-	--page-bg:  #ffffff;
-	--text-fg:  #000000;
+	--page-bg:  #222222;
+	--text-fg:  #ffffff;
 }
 
 body {
